# drf-oa-workflow

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
docs/: api.md  installation.md  usage.md
drf_oa_workflow/: __init__.py  admin.py  api_example_data.py  apps.py  choices.py  cli.py  contains.py  handler.py  middleware.py  service.py  settings.py  tasks.py  urls.py  utils.py  views.py
drf_oa_workflow/db/: function.py  manager.py  models.py
drf_oa_workflow/migrations/: 0002_oauserinfo_name.py  0003_alter_oauserinfo_staff_code.py  0004_oauserinfo_dept_name.py  0005_hrmdepartment_hrmresource_workflowbase_and_more.py  0006_workflowtype.py  0007_oaworkflowtype_oaworkflow_oaworkflownode_and_more.py  0007_workflowrequestoperatelog_oauserinfo_status.py  0007_workflowrequestwccextendinfo_oaworkflowtype_and_more.py  0007_workflowrequestwccextendinfo_registerworkflowtype_and_more.py  0008_alter_approval_register_workflow_and_more.py  0008_alter_oaworkflow_form_permissions_and_more.py
drf_oa_workflow/models/: __init__.py  base.py  oa_hrmresource.py  oa_workflow.py  user.py  workflow_approval.py  workflow_register.py
drf_oa_workflow/serializers/: __init__.py  approval.py  extend_schema.py  oa_workflow.py  post_data_valid.py  user.py  workflow_approval.py  workflow_register.py
drf_oa_workflow/static/drf_oa_workflow/css/: element-ui.css
drf_oa_workflow/static/drf_oa_workflow/js/: vue.js
drf_oa_workflow/templates/drf_oa_workflow/: workflowChange.html  workflowList.html  workflowTypeList.html
drf_oa_workflow/views/: approval.py  base.py  workflow_approval.py  workflow_register.py
tests/: __init__.py  test_oa_workflow_api.py
